@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.yura.domination"
-      android:versionCode="3"
+      android:versionCode="4"
       android:versionName="1.1.1.0"
       android:installLocation="preferExternal">
       
